name:           hasktorch-core
version:        0.0.1.0
synopsis:       Torch for tensors and neural networks in Haskell
description:    core tensor abstractions wrapping raw TH bindings
category:       Tensors, Machine Learning
homepage:       https://github.com/hasktorch/hasktorch#readme
bug-reports:    https://github.com/hasktorch/hasktorch/issues
author:         Austin Huang
license:        BSD3
build-type:     Simple
cabal-version:  >= 2.0

source-repository head
  type: git
  location: https://github.com/hasktorch/hasktorch

flag cuda
  Description: build with THC support
  Default: True

library
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions: LambdaCase, DataKinds, TypeFamilies
  build-depends:
      base >=4.7 && <5
    , containers
    , deepseq >=1.3.0.0
    , dimensions >=0.3.2.0
    , hasktorch-classes
    , hasktorch-dimensions
    , hasktorch-indef-unsigned
    , hasktorch-indef-signed
    , hasktorch-indef-floating
    , hasktorch-raw-th
    , hasktorch-types-th
    , managed >=1.0.0 && <1.1
    , microlens >=0.4.8.1
    , numeric-limits
    , safe-exceptions >=0.1.0.0
    , singletons >=2.2
    , text >=1.2.2.2
    , typelits-witnesses >=0.2.3.0
  if flag(cuda)
    build-depends:
        hasktorch-types-thc
      , hasktorch-raw-thc
    cpp-options: -DCUDA


  exposed-modules:
    -- support modules

      Torch.Core.Exceptions
    -- , Torch.Core.Random
    -- , Torch.Core.LogAdd

    -- CPU modules
    , Torch
    , Torch.Storage
    , Torch.Dynamic

    -- CPU modules
    , Torch.Cuda
    , Torch.Cuda.Storage
    , Torch.Cuda.Dynamic

  other-modules:
      Torch.Internal

  reexported-modules:
      Torch.Dimensions

    , Torch.Byte.Storage
    , Torch.Byte.Dynamic
    , Torch.Byte.Static

    , Torch.Char.Storage
    , Torch.Char.Dynamic
    , Torch.Char.Static

    , Torch.Short.Storage
    , Torch.Short.Dynamic
    , Torch.Short.Static

    , Torch.Int.Storage
    , Torch.Int.Dynamic
    , Torch.Int.Static

    , Torch.Long.Storage
    , Torch.Long.Dynamic
    , Torch.Long.Static

    , Torch.Float.Storage
    , Torch.Float.Dynamic
    , Torch.Float.Static

    , Torch.Double.Storage
    , Torch.Double.Dynamic
    , Torch.Double.Static

    , Torch.Cuda.Byte.Storage
    , Torch.Cuda.Byte.Dynamic
    , Torch.Cuda.Byte.Static

    , Torch.Cuda.Char.Storage
    , Torch.Cuda.Char.Dynamic
    , Torch.Cuda.Char.Static

    , Torch.Cuda.Short.Storage
    , Torch.Cuda.Short.Dynamic
    , Torch.Cuda.Short.Static

    , Torch.Cuda.Int.Storage
    , Torch.Cuda.Int.Dynamic
    , Torch.Cuda.Int.Static

    , Torch.Cuda.Long.Storage
    , Torch.Cuda.Long.Dynamic
    , Torch.Cuda.Long.Static

    -- FIXME: ATen doesn't build these.
    -- , Torch.Cuda.Float.Storage
    -- , Torch.Cuda.Float.Dynamic
    -- , Torch.Cuda.Float.Static

    , Torch.Cuda.Double.Storage
    , Torch.Cuda.Double.Dynamic
    , Torch.Cuda.Double.Static


  mixins:
      hasktorch-indef-unsigned
        (Torch.Indef.Storage              as Torch.Byte.Storage
        ,Torch.Indef.Dynamic              as Torch.Byte.Dynamic
        ,Torch.Indef.Static               as Torch.Byte.Static
        )
        requires
        (Torch.Sig.State          as Torch.Types.TH
        ,Torch.Sig.Types.Global   as Torch.Types.TH
        ,Torch.Sig.Types          as Torch.Types.TH.Byte
        ,Torch.Sig.Storage        as Torch.FFI.TH.Byte.Storage
        ,Torch.Sig.Storage.Copy   as Torch.FFI.TH.Byte.StorageCopy
        ,Torch.Sig.Storage.Memory as Torch.FFI.TH.Byte.FreeStorage
        ,Torch.Sig.Tensor         as Torch.FFI.TH.Byte.Tensor
        ,Torch.Sig.Tensor.Copy    as Torch.FFI.TH.Byte.TensorCopy
        ,Torch.Sig.Tensor.Memory  as Torch.FFI.TH.Byte.FreeTensor
        ,Torch.Sig.Tensor.Index   as Torch.FFI.TH.Byte.TensorMath
        ,Torch.Sig.Tensor.Masked  as Torch.FFI.TH.Byte.TensorMath
        ,Torch.Sig.Tensor.Math           as Torch.FFI.TH.Byte.TensorMath
        ,Torch.Sig.Tensor.Math.Compare   as Torch.FFI.TH.Byte.TensorMath
        ,Torch.Sig.Tensor.Math.CompareT  as Torch.FFI.TH.Byte.TensorMath
        ,Torch.Sig.Tensor.Math.Pairwise  as Torch.FFI.TH.Byte.TensorMath
        ,Torch.Sig.Tensor.Math.Pointwise as Torch.FFI.TH.Byte.TensorMath
        ,Torch.Sig.Tensor.Math.Reduce    as Torch.FFI.TH.Byte.TensorMath
        ,Torch.Sig.Tensor.Math.Scan      as Torch.FFI.TH.Byte.TensorMath
        ,Torch.Sig.Tensor.Mode           as Torch.FFI.TH.Byte.TensorMath
        ,Torch.Sig.Tensor.ScatterGather  as Torch.FFI.TH.Byte.TensorMath
        ,Torch.Sig.Tensor.Sort           as Torch.FFI.TH.Byte.TensorMath
        ,Torch.Sig.Tensor.TopK           as Torch.FFI.TH.Byte.TensorMath
        -- ,Torch.Sig.Tensor.Random        as Torch.FFI.TH.Byte.TensorRandom

        -- * Used to be available in TH
        -- ,Torch.Sig.Tensor.Conv   as Torch.FFI.TH.Byte.TensorConv
        )
    , hasktorch-indef-unsigned
        (Torch.Indef.Storage              as Torch.Char.Storage
        ,Torch.Indef.Dynamic              as Torch.Char.Dynamic
        ,Torch.Indef.Static               as Torch.Char.Static
        )
        requires
        (Torch.Sig.State          as Torch.Types.TH
        ,Torch.Sig.Types.Global   as Torch.Types.TH
        ,Torch.Sig.Types          as Torch.Types.TH.Char
        ,Torch.Sig.Storage        as Torch.FFI.TH.Char.Storage
        ,Torch.Sig.Storage.Copy   as Torch.FFI.TH.Char.StorageCopy
        ,Torch.Sig.Storage.Memory as Torch.FFI.TH.Char.FreeStorage
        ,Torch.Sig.Tensor         as Torch.FFI.TH.Char.Tensor
        ,Torch.Sig.Tensor.Copy    as Torch.FFI.TH.Char.TensorCopy
        ,Torch.Sig.Tensor.Memory  as Torch.FFI.TH.Char.FreeTensor
        ,Torch.Sig.Tensor.Index   as Torch.FFI.TH.Char.TensorMath
        ,Torch.Sig.Tensor.Masked  as Torch.FFI.TH.Char.TensorMath
        ,Torch.Sig.Tensor.Math           as Torch.FFI.TH.Char.TensorMath
        ,Torch.Sig.Tensor.Math.Compare   as Torch.FFI.TH.Char.TensorMath
        ,Torch.Sig.Tensor.Math.CompareT  as Torch.FFI.TH.Char.TensorMath
        ,Torch.Sig.Tensor.Math.Pairwise  as Torch.FFI.TH.Char.TensorMath
        ,Torch.Sig.Tensor.Math.Pointwise as Torch.FFI.TH.Char.TensorMath
        ,Torch.Sig.Tensor.Math.Reduce    as Torch.FFI.TH.Char.TensorMath
        ,Torch.Sig.Tensor.Math.Scan      as Torch.FFI.TH.Char.TensorMath
        ,Torch.Sig.Tensor.Mode           as Torch.FFI.TH.Char.TensorMath
        ,Torch.Sig.Tensor.ScatterGather  as Torch.FFI.TH.Char.TensorMath
        ,Torch.Sig.Tensor.Sort           as Torch.FFI.TH.Char.TensorMath
        ,Torch.Sig.Tensor.TopK           as Torch.FFI.TH.Char.TensorMath
        -- ,Torch.Sig.Tensor.Random        as Torch.FFI.TH.Char.TensorRandom
        )
    , hasktorch-indef-signed
        (Torch.Indef.Storage              as Torch.Short.Storage
        ,Torch.Indef.Dynamic              as Torch.Short.Dynamic
        ,Torch.Indef.Static               as Torch.Short.Static
        )
        requires
        (Torch.Sig.State          as Torch.Types.TH
        ,Torch.Sig.Types.Global   as Torch.Types.TH
        ,Torch.Sig.Types          as Torch.Types.TH.Short
        ,Torch.Sig.Storage        as Torch.FFI.TH.Short.Storage
        ,Torch.Sig.Storage.Copy   as Torch.FFI.TH.Short.StorageCopy
        ,Torch.Sig.Storage.Memory as Torch.FFI.TH.Short.FreeStorage
        ,Torch.Sig.Tensor         as Torch.FFI.TH.Short.Tensor
        ,Torch.Sig.Tensor.Copy    as Torch.FFI.TH.Short.TensorCopy
        ,Torch.Sig.Tensor.Memory  as Torch.FFI.TH.Short.FreeTensor
        ,Torch.Sig.Tensor.Index   as Torch.FFI.TH.Short.TensorMath
        ,Torch.Sig.Tensor.Masked  as Torch.FFI.TH.Short.TensorMath
        ,Torch.Sig.Tensor.Math           as Torch.FFI.TH.Short.TensorMath
        ,Torch.Sig.Tensor.Math.Compare   as Torch.FFI.TH.Short.TensorMath
        ,Torch.Sig.Tensor.Math.CompareT  as Torch.FFI.TH.Short.TensorMath
        ,Torch.Sig.Tensor.Math.Pairwise  as Torch.FFI.TH.Short.TensorMath
        ,Torch.Sig.Tensor.Math.Pointwise as Torch.FFI.TH.Short.TensorMath
        ,Torch.Sig.Tensor.Math.Reduce    as Torch.FFI.TH.Short.TensorMath
        ,Torch.Sig.Tensor.Math.Scan      as Torch.FFI.TH.Short.TensorMath
        ,Torch.Sig.Tensor.Mode           as Torch.FFI.TH.Short.TensorMath
        ,Torch.Sig.Tensor.ScatterGather  as Torch.FFI.TH.Short.TensorMath
        ,Torch.Sig.Tensor.Sort           as Torch.FFI.TH.Short.TensorMath
        ,Torch.Sig.Tensor.TopK           as Torch.FFI.TH.Short.TensorMath
        -- ,Torch.Sig.Tensor.Random        as Torch.FFI.TH.Short.TensorRandom
        ,Torch.Sig.Tensor.Math.Pointwise.Signed as Torch.FFI.TH.Short.TensorMath
        )
    , hasktorch-indef-signed
        (Torch.Indef.Storage              as Torch.Int.Storage
        ,Torch.Indef.Dynamic              as Torch.Int.Dynamic
        ,Torch.Indef.Static               as Torch.Int.Static
        )
        requires
        (Torch.Sig.State          as Torch.Types.TH
        ,Torch.Sig.Types.Global   as Torch.Types.TH
        ,Torch.Sig.Types          as Torch.Types.TH.Int
        ,Torch.Sig.Storage        as Torch.FFI.TH.Int.Storage
        ,Torch.Sig.Storage.Copy   as Torch.FFI.TH.Int.StorageCopy
        ,Torch.Sig.Storage.Memory as Torch.FFI.TH.Int.FreeStorage
        ,Torch.Sig.Tensor         as Torch.FFI.TH.Int.Tensor
        ,Torch.Sig.Tensor.Copy    as Torch.FFI.TH.Int.TensorCopy
        ,Torch.Sig.Tensor.Memory  as Torch.FFI.TH.Int.FreeTensor
        ,Torch.Sig.Tensor.Index   as Torch.FFI.TH.Int.TensorMath
        ,Torch.Sig.Tensor.Masked  as Torch.FFI.TH.Int.TensorMath
        ,Torch.Sig.Tensor.Math           as Torch.FFI.TH.Int.TensorMath
        ,Torch.Sig.Tensor.Math.Compare   as Torch.FFI.TH.Int.TensorMath
        ,Torch.Sig.Tensor.Math.CompareT  as Torch.FFI.TH.Int.TensorMath
        ,Torch.Sig.Tensor.Math.Pairwise  as Torch.FFI.TH.Int.TensorMath
        ,Torch.Sig.Tensor.Math.Pointwise as Torch.FFI.TH.Int.TensorMath
        ,Torch.Sig.Tensor.Math.Reduce    as Torch.FFI.TH.Int.TensorMath
        ,Torch.Sig.Tensor.Math.Scan      as Torch.FFI.TH.Int.TensorMath
        ,Torch.Sig.Tensor.Mode           as Torch.FFI.TH.Int.TensorMath
        ,Torch.Sig.Tensor.ScatterGather  as Torch.FFI.TH.Int.TensorMath
        ,Torch.Sig.Tensor.Sort           as Torch.FFI.TH.Int.TensorMath
        ,Torch.Sig.Tensor.TopK           as Torch.FFI.TH.Int.TensorMath
        -- ,Torch.Sig.Tensor.Random        as Torch.FFI.TH.Int.TensorRandom
        ,Torch.Sig.Tensor.Math.Pointwise.Signed as Torch.FFI.TH.Int.TensorMath
        )
    , hasktorch-indef-signed
        (Torch.Indef.Storage              as Torch.Long.Storage
        ,Torch.Indef.Dynamic              as Torch.Long.Dynamic
        ,Torch.Indef.Static               as Torch.Long.Static
        )
        requires
        (Torch.Sig.State          as Torch.Types.TH
        ,Torch.Sig.Types.Global   as Torch.Types.TH
        ,Torch.Sig.Types          as Torch.Types.TH.Long
        ,Torch.Sig.Storage        as Torch.FFI.TH.Long.Storage
        ,Torch.Sig.Storage.Copy   as Torch.FFI.TH.Long.StorageCopy
        ,Torch.Sig.Storage.Memory as Torch.FFI.TH.Long.FreeStorage
        ,Torch.Sig.Tensor         as Torch.FFI.TH.Long.Tensor
        ,Torch.Sig.Tensor.Copy    as Torch.FFI.TH.Long.TensorCopy
        ,Torch.Sig.Tensor.Memory  as Torch.FFI.TH.Long.FreeTensor
        ,Torch.Sig.Tensor.Index   as Torch.FFI.TH.Long.TensorMath
        ,Torch.Sig.Tensor.Masked  as Torch.FFI.TH.Long.TensorMath
        ,Torch.Sig.Tensor.Math           as Torch.FFI.TH.Long.TensorMath
        ,Torch.Sig.Tensor.Math.Compare   as Torch.FFI.TH.Long.TensorMath
        ,Torch.Sig.Tensor.Math.CompareT  as Torch.FFI.TH.Long.TensorMath
        ,Torch.Sig.Tensor.Math.Pairwise  as Torch.FFI.TH.Long.TensorMath
        ,Torch.Sig.Tensor.Math.Pointwise as Torch.FFI.TH.Long.TensorMath
        ,Torch.Sig.Tensor.Math.Reduce    as Torch.FFI.TH.Long.TensorMath
        ,Torch.Sig.Tensor.Math.Scan      as Torch.FFI.TH.Long.TensorMath
        ,Torch.Sig.Tensor.Mode           as Torch.FFI.TH.Long.TensorMath
        ,Torch.Sig.Tensor.ScatterGather  as Torch.FFI.TH.Long.TensorMath
        ,Torch.Sig.Tensor.Sort           as Torch.FFI.TH.Long.TensorMath
        ,Torch.Sig.Tensor.TopK           as Torch.FFI.TH.Long.TensorMath
        -- ,Torch.Sig.Tensor.Random        as Torch.FFI.TH.Long.TensorRandom
        ,Torch.Sig.Tensor.Math.Pointwise.Signed as Torch.FFI.TH.Long.TensorMath
        )
    , hasktorch-indef-floating
        (Torch.Indef.Storage              as Torch.Float.Storage
        ,Torch.Indef.Dynamic              as Torch.Float.Dynamic
        ,Torch.Indef.Static               as Torch.Float.Static
        )
        requires
        (Torch.Sig.State          as Torch.Types.TH
        ,Torch.Sig.Types.Global   as Torch.Types.TH
        ,Torch.Sig.Types          as Torch.Types.TH.Float
        ,Torch.Sig.Storage        as Torch.FFI.TH.Float.Storage
        ,Torch.Sig.Storage.Copy   as Torch.FFI.TH.Float.StorageCopy
        ,Torch.Sig.Storage.Memory as Torch.FFI.TH.Float.FreeStorage
        ,Torch.Sig.Tensor         as Torch.FFI.TH.Float.Tensor
        ,Torch.Sig.Tensor.Copy    as Torch.FFI.TH.Float.TensorCopy
        ,Torch.Sig.Tensor.Memory  as Torch.FFI.TH.Float.FreeTensor
        ,Torch.Sig.Tensor.Index   as Torch.FFI.TH.Float.TensorMath
        ,Torch.Sig.Tensor.Masked  as Torch.FFI.TH.Float.TensorMath
        ,Torch.Sig.Tensor.Math           as Torch.FFI.TH.Float.TensorMath
        ,Torch.Sig.Tensor.Math.Compare   as Torch.FFI.TH.Float.TensorMath
        ,Torch.Sig.Tensor.Math.CompareT  as Torch.FFI.TH.Float.TensorMath
        ,Torch.Sig.Tensor.Math.Pairwise  as Torch.FFI.TH.Float.TensorMath
        ,Torch.Sig.Tensor.Math.Pointwise as Torch.FFI.TH.Float.TensorMath
        ,Torch.Sig.Tensor.Math.Reduce    as Torch.FFI.TH.Float.TensorMath
        ,Torch.Sig.Tensor.Math.Scan      as Torch.FFI.TH.Float.TensorMath
        ,Torch.Sig.Tensor.Mode           as Torch.FFI.TH.Float.TensorMath
        ,Torch.Sig.Tensor.ScatterGather  as Torch.FFI.TH.Float.TensorMath
        ,Torch.Sig.Tensor.Sort           as Torch.FFI.TH.Float.TensorMath
        ,Torch.Sig.Tensor.TopK           as Torch.FFI.TH.Float.TensorMath

        ,Torch.Sig.Tensor.Math.Pointwise.Signed as Torch.FFI.TH.Float.TensorMath
        ,Torch.Sig.Tensor.Math.Pointwise.Floating as Torch.FFI.TH.Float.TensorMath

        ,Torch.Sig.Tensor.Math.Blas     as Torch.FFI.TH.Float.TensorMath
        ,Torch.Sig.Tensor.Math.Lapack   as Torch.FFI.TH.Float.TensorLapack
        ,Torch.Sig.Tensor.Math.Floating as Torch.FFI.TH.Float.TensorMath
        ,Torch.Sig.Tensor.Math.Reduce.Floating as Torch.FFI.TH.Float.TensorMath

        ,Torch.Sig.NN       as Torch.FFI.TH.NN.Float
        ,Torch.Sig.Types.NN as Torch.Types.TH
        )
    , hasktorch-indef-floating
        (Torch.Indef.Storage              as Torch.Double.Storage
        ,Torch.Indef.Dynamic              as Torch.Double.Dynamic
        ,Torch.Indef.Static               as Torch.Double.Static
        )
        requires
        (Torch.Sig.State          as Torch.Types.TH
        ,Torch.Sig.Types.Global   as Torch.Types.TH
        ,Torch.Sig.Types          as Torch.Types.TH.Double
        ,Torch.Sig.Storage        as Torch.FFI.TH.Double.Storage
        ,Torch.Sig.Storage.Copy   as Torch.FFI.TH.Double.StorageCopy
        ,Torch.Sig.Storage.Memory as Torch.FFI.TH.Double.FreeStorage
        ,Torch.Sig.Tensor         as Torch.FFI.TH.Double.Tensor
        ,Torch.Sig.Tensor.Copy    as Torch.FFI.TH.Double.TensorCopy
        ,Torch.Sig.Tensor.Memory  as Torch.FFI.TH.Double.FreeTensor
        ,Torch.Sig.Tensor.Index   as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.Masked  as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.Math           as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.Math.Compare   as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.Math.CompareT  as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.Math.Pairwise  as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.Math.Pointwise as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.Math.Reduce    as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.Math.Scan      as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.Mode           as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.ScatterGather  as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.Sort           as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.TopK           as Torch.FFI.TH.Double.TensorMath

        ,Torch.Sig.Tensor.Math.Pointwise.Signed as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.Math.Pointwise.Floating as Torch.FFI.TH.Double.TensorMath

        ,Torch.Sig.Tensor.Math.Blas     as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.Math.Lapack   as Torch.FFI.TH.Double.TensorLapack
        ,Torch.Sig.Tensor.Math.Floating as Torch.FFI.TH.Double.TensorMath
        ,Torch.Sig.Tensor.Math.Reduce.Floating as Torch.FFI.TH.Double.TensorMath

        ,Torch.Sig.NN       as Torch.FFI.TH.NN.Double
        ,Torch.Sig.Types.NN as Torch.Types.TH
        )

  if flag(cuda)
    mixins:
        hasktorch-indef-unsigned
          (Torch.Indef.Storage              as Torch.Cuda.Byte.Storage
          ,Torch.Indef.Dynamic              as Torch.Cuda.Byte.Dynamic
          ,Torch.Indef.Static               as Torch.Cuda.Byte.Static
          )
          requires
          (Torch.Sig.Types.Global      as Torch.Types.THC
          ,Torch.Sig.Types             as Torch.Types.THC.Byte
          ,Torch.Sig.State             as Torch.FFI.THC.State
          ,Torch.Sig.Storage           as Torch.FFI.THC.Byte.Storage
          ,Torch.Sig.Storage.Copy      as Torch.FFI.THC.Byte.StorageCopy
          ,Torch.Sig.Storage.Memory    as Torch.FFI.THC.Byte.Storage
          ,Torch.Sig.Tensor            as Torch.FFI.THC.Byte.Tensor
          ,Torch.Sig.Tensor.Copy       as Torch.FFI.THC.Byte.TensorCopy
          ,Torch.Sig.Tensor.Memory     as Torch.FFI.THC.Byte.Tensor

          ,Torch.Sig.Tensor.Index          as Torch.FFI.THC.Byte.TensorIndex
          ,Torch.Sig.Tensor.Masked         as Torch.FFI.THC.Byte.TensorMasked
          ,Torch.Sig.Tensor.Math           as Torch.FFI.THC.Byte.TensorMath
          ,Torch.Sig.Tensor.Math.Compare   as Torch.FFI.THC.Byte.TensorMathCompare
          ,Torch.Sig.Tensor.Math.CompareT  as Torch.FFI.THC.Byte.TensorMathCompareT
          ,Torch.Sig.Tensor.Math.Pairwise  as Torch.FFI.THC.Byte.TensorMathPairwise
          ,Torch.Sig.Tensor.Math.Pointwise as Torch.FFI.THC.Byte.TensorMathPointwise
          ,Torch.Sig.Tensor.Math.Reduce    as Torch.FFI.THC.Byte.TensorMathReduce
          ,Torch.Sig.Tensor.Math.Scan      as Torch.FFI.THC.Byte.TensorMathScan
          ,Torch.Sig.Tensor.Mode           as Torch.FFI.THC.Byte.TensorMode
          ,Torch.Sig.Tensor.ScatterGather  as Torch.FFI.THC.Byte.TensorScatterGather
          ,Torch.Sig.Tensor.Sort           as Torch.FFI.THC.Byte.TensorSort
          ,Torch.Sig.Tensor.TopK           as Torch.FFI.THC.Byte.TensorTopK
          )

      , hasktorch-indef-unsigned
          (Torch.Indef.Storage              as Torch.Cuda.Char.Storage
          ,Torch.Indef.Dynamic              as Torch.Cuda.Char.Dynamic
          ,Torch.Indef.Static               as Torch.Cuda.Char.Static
          )
          requires
          (Torch.Sig.Types.Global      as Torch.Types.THC
          ,Torch.Sig.Types             as Torch.Types.THC.Char
          ,Torch.Sig.State             as Torch.FFI.THC.State
          ,Torch.Sig.Storage           as Torch.FFI.THC.Char.Storage
          ,Torch.Sig.Storage.Copy      as Torch.FFI.THC.Char.StorageCopy
          ,Torch.Sig.Storage.Memory    as Torch.FFI.THC.Char.Storage
          ,Torch.Sig.Tensor            as Torch.FFI.THC.Char.Tensor
          ,Torch.Sig.Tensor.Copy       as Torch.FFI.THC.Char.TensorCopy
          ,Torch.Sig.Tensor.Memory     as Torch.FFI.THC.Char.Tensor

          ,Torch.Sig.Tensor.Index          as Torch.FFI.THC.Char.TensorIndex
          ,Torch.Sig.Tensor.Masked         as Torch.FFI.THC.Char.TensorMasked
          ,Torch.Sig.Tensor.Math           as Torch.FFI.THC.Char.TensorMath
          ,Torch.Sig.Tensor.Math.Compare   as Torch.FFI.THC.Char.TensorMathCompare
          ,Torch.Sig.Tensor.Math.CompareT  as Torch.FFI.THC.Char.TensorMathCompareT
          ,Torch.Sig.Tensor.Math.Pairwise  as Torch.FFI.THC.Char.TensorMathPairwise
          ,Torch.Sig.Tensor.Math.Pointwise as Torch.FFI.THC.Char.TensorMathPointwise
          ,Torch.Sig.Tensor.Math.Reduce    as Torch.FFI.THC.Char.TensorMathReduce
          ,Torch.Sig.Tensor.Math.Scan      as Torch.FFI.THC.Char.TensorMathScan
          ,Torch.Sig.Tensor.Mode           as Torch.FFI.THC.Char.TensorMode
          ,Torch.Sig.Tensor.ScatterGather  as Torch.FFI.THC.Char.TensorScatterGather
          ,Torch.Sig.Tensor.Sort           as Torch.FFI.THC.Char.TensorSort
          ,Torch.Sig.Tensor.TopK           as Torch.FFI.THC.Char.TensorTopK
          )
      , hasktorch-indef-signed
          (Torch.Indef.Storage              as Torch.Cuda.Short.Storage
          ,Torch.Indef.Dynamic              as Torch.Cuda.Short.Dynamic
          ,Torch.Indef.Static               as Torch.Cuda.Short.Static
          )
          requires
          (Torch.Sig.Types.Global   as Torch.Types.THC
          ,Torch.Sig.Types          as Torch.Types.THC.Short
          ,Torch.Sig.State          as Torch.FFI.THC.State
          ,Torch.Sig.Storage        as Torch.FFI.THC.Short.Storage
          ,Torch.Sig.Storage.Copy   as Torch.FFI.THC.Short.StorageCopy
          ,Torch.Sig.Storage.Memory as Torch.FFI.THC.Short.Storage

          ,Torch.Sig.Tensor        as Torch.FFI.THC.Short.Tensor
          ,Torch.Sig.Tensor.Copy   as Torch.FFI.THC.Short.TensorCopy
          ,Torch.Sig.Tensor.Memory as Torch.FFI.THC.Short.Tensor

          ,Torch.Sig.Tensor.Index  as Torch.FFI.THC.Short.TensorIndex
          ,Torch.Sig.Tensor.Masked as Torch.FFI.THC.Short.TensorMasked
          ,Torch.Sig.Tensor.Math           as Torch.FFI.THC.Short.TensorMath
          ,Torch.Sig.Tensor.Math.Compare   as Torch.FFI.THC.Short.TensorMathCompare
          ,Torch.Sig.Tensor.Math.CompareT  as Torch.FFI.THC.Short.TensorMathCompareT
          ,Torch.Sig.Tensor.Math.Pairwise  as Torch.FFI.THC.Short.TensorMathPairwise
          ,Torch.Sig.Tensor.Math.Pointwise as Torch.FFI.THC.Short.TensorMathPointwise
          ,Torch.Sig.Tensor.Math.Reduce    as Torch.FFI.THC.Short.TensorMathReduce
          ,Torch.Sig.Tensor.Math.Scan      as Torch.FFI.THC.Short.TensorMathScan
          ,Torch.Sig.Tensor.Mode           as Torch.FFI.THC.Short.TensorMode
          ,Torch.Sig.Tensor.ScatterGather  as Torch.FFI.THC.Short.TensorScatterGather
          ,Torch.Sig.Tensor.Sort           as Torch.FFI.THC.Short.TensorSort
          ,Torch.Sig.Tensor.TopK           as Torch.FFI.THC.Short.TensorTopK
          ,Torch.Sig.Tensor.Math.Pointwise.Signed as Torch.FFI.THC.Short.TensorMathPointwise
          )
      , hasktorch-indef-signed
          (Torch.Indef.Storage              as Torch.Cuda.Int.Storage
          ,Torch.Indef.Dynamic              as Torch.Cuda.Int.Dynamic
          ,Torch.Indef.Static               as Torch.Cuda.Int.Static
          )
          requires
          (Torch.Sig.Types.Global   as Torch.Types.THC
          ,Torch.Sig.Types          as Torch.Types.THC.Int
          ,Torch.Sig.State          as Torch.FFI.THC.State
          ,Torch.Sig.Storage        as Torch.FFI.THC.Int.Storage
          ,Torch.Sig.Storage.Copy   as Torch.FFI.THC.Int.StorageCopy
          ,Torch.Sig.Storage.Memory as Torch.FFI.THC.Int.Storage

          ,Torch.Sig.Tensor        as Torch.FFI.THC.Int.Tensor
          ,Torch.Sig.Tensor.Copy   as Torch.FFI.THC.Int.TensorCopy
          ,Torch.Sig.Tensor.Memory as Torch.FFI.THC.Int.Tensor

          ,Torch.Sig.Tensor.Index  as Torch.FFI.THC.Int.TensorIndex
          ,Torch.Sig.Tensor.Masked as Torch.FFI.THC.Int.TensorMasked
          ,Torch.Sig.Tensor.Math           as Torch.FFI.THC.Int.TensorMath
          ,Torch.Sig.Tensor.Math.Compare   as Torch.FFI.THC.Int.TensorMathCompare
          ,Torch.Sig.Tensor.Math.CompareT  as Torch.FFI.THC.Int.TensorMathCompareT
          ,Torch.Sig.Tensor.Math.Pairwise  as Torch.FFI.THC.Int.TensorMathPairwise
          ,Torch.Sig.Tensor.Math.Pointwise as Torch.FFI.THC.Int.TensorMathPointwise
          ,Torch.Sig.Tensor.Math.Reduce    as Torch.FFI.THC.Int.TensorMathReduce
          ,Torch.Sig.Tensor.Math.Scan      as Torch.FFI.THC.Int.TensorMathScan
          ,Torch.Sig.Tensor.Mode           as Torch.FFI.THC.Int.TensorMode
          ,Torch.Sig.Tensor.ScatterGather  as Torch.FFI.THC.Int.TensorScatterGather
          ,Torch.Sig.Tensor.Sort           as Torch.FFI.THC.Int.TensorSort
          ,Torch.Sig.Tensor.TopK           as Torch.FFI.THC.Int.TensorTopK
          ,Torch.Sig.Tensor.Math.Pointwise.Signed as Torch.FFI.THC.Int.TensorMathPointwise
          )
      , hasktorch-indef-signed
          (Torch.Indef.Storage              as Torch.Cuda.Long.Storage
          ,Torch.Indef.Dynamic              as Torch.Cuda.Long.Dynamic
          ,Torch.Indef.Static               as Torch.Cuda.Long.Static
          )
          requires
          (Torch.Sig.Types.Global   as Torch.Types.THC
          ,Torch.Sig.Types          as Torch.Types.THC.Long
          ,Torch.Sig.State          as Torch.FFI.THC.State
          ,Torch.Sig.Storage        as Torch.FFI.THC.Long.Storage
          ,Torch.Sig.Storage.Copy   as Torch.FFI.THC.Long.StorageCopy
          ,Torch.Sig.Storage.Memory as Torch.FFI.THC.Long.Storage

          ,Torch.Sig.Tensor        as Torch.FFI.THC.Long.Tensor
          ,Torch.Sig.Tensor.Copy   as Torch.FFI.THC.Long.TensorCopy
          ,Torch.Sig.Tensor.Memory as Torch.FFI.THC.Long.Tensor

          ,Torch.Sig.Tensor.Index  as Torch.FFI.THC.Long.TensorIndex
          ,Torch.Sig.Tensor.Masked as Torch.FFI.THC.Long.TensorMasked
          ,Torch.Sig.Tensor.Math           as Torch.FFI.THC.Long.TensorMath
          ,Torch.Sig.Tensor.Math.Compare   as Torch.FFI.THC.Long.TensorMathCompare
          ,Torch.Sig.Tensor.Math.CompareT  as Torch.FFI.THC.Long.TensorMathCompareT
          ,Torch.Sig.Tensor.Math.Pairwise  as Torch.FFI.THC.Long.TensorMathPairwise
          ,Torch.Sig.Tensor.Math.Pointwise as Torch.FFI.THC.Long.TensorMathPointwise
          ,Torch.Sig.Tensor.Math.Reduce    as Torch.FFI.THC.Long.TensorMathReduce
          ,Torch.Sig.Tensor.Math.Scan      as Torch.FFI.THC.Long.TensorMathScan
          ,Torch.Sig.Tensor.Mode           as Torch.FFI.THC.Long.TensorMode
          ,Torch.Sig.Tensor.ScatterGather  as Torch.FFI.THC.Long.TensorScatterGather
          ,Torch.Sig.Tensor.Sort           as Torch.FFI.THC.Long.TensorSort
          ,Torch.Sig.Tensor.TopK           as Torch.FFI.THC.Long.TensorTopK
          ,Torch.Sig.Tensor.Math.Pointwise.Signed as Torch.FFI.THC.Long.TensorMathPointwise
          )
      , hasktorch-indef-floating
          (Torch.Indef.Storage              as Torch.Cuda.Double.Storage
          ,Torch.Indef.Dynamic              as Torch.Cuda.Double.Dynamic
          ,Torch.Indef.Static               as Torch.Cuda.Double.Static
          )
          requires
          (Torch.Sig.Types.Global   as Torch.Types.THC
          ,Torch.Sig.Types          as Torch.Types.THC.Double
          ,Torch.Sig.State          as Torch.FFI.THC.State
          ,Torch.Sig.Storage        as Torch.FFI.THC.Double.Storage
          ,Torch.Sig.Storage.Copy   as Torch.FFI.THC.Double.StorageCopy
          ,Torch.Sig.Storage.Memory as Torch.FFI.THC.Double.Storage

          ,Torch.Sig.Tensor        as Torch.FFI.THC.Double.Tensor
          ,Torch.Sig.Tensor.Copy   as Torch.FFI.THC.Double.TensorCopy
          ,Torch.Sig.Tensor.Memory as Torch.FFI.THC.Double.Tensor

          ,Torch.Sig.Tensor.Index  as Torch.FFI.THC.Double.TensorIndex
          ,Torch.Sig.Tensor.Masked as Torch.FFI.THC.Double.TensorMasked
          ,Torch.Sig.Tensor.Math           as Torch.FFI.THC.Double.TensorMath
          ,Torch.Sig.Tensor.Math.Compare   as Torch.FFI.THC.Double.TensorMathCompare
          ,Torch.Sig.Tensor.Math.CompareT  as Torch.FFI.THC.Double.TensorMathCompareT
          ,Torch.Sig.Tensor.Math.Pairwise  as Torch.FFI.THC.Double.TensorMathPairwise
          ,Torch.Sig.Tensor.Math.Pointwise as Torch.FFI.THC.Double.TensorMathPointwise
          ,Torch.Sig.Tensor.Math.Reduce    as Torch.FFI.THC.Double.TensorMathReduce
          ,Torch.Sig.Tensor.Math.Scan      as Torch.FFI.THC.Double.TensorMathScan
          ,Torch.Sig.Tensor.Mode           as Torch.FFI.THC.Double.TensorMode
          ,Torch.Sig.Tensor.ScatterGather  as Torch.FFI.THC.Double.TensorScatterGather
          ,Torch.Sig.Tensor.Sort           as Torch.FFI.THC.Double.TensorSort
          ,Torch.Sig.Tensor.TopK           as Torch.FFI.THC.Double.TensorTopK
          ,Torch.Sig.Tensor.Math.Pointwise.Signed as Torch.FFI.THC.Double.TensorMathPointwise

          ,Torch.Sig.Tensor.Math.Blas               as Torch.FFI.THC.Double.TensorMathBlas
          ,Torch.Sig.Tensor.Math.Lapack             as Torch.FFI.THC.Double.TensorMathMagma
          ,Torch.Sig.Tensor.Math.Floating           as Torch.FFI.THC.Double.TensorMath
          ,Torch.Sig.Tensor.Math.Pointwise.Floating as Torch.FFI.THC.Double.TensorMathPointwise
          ,Torch.Sig.Tensor.Math.Reduce.Floating    as Torch.FFI.THC.Double.TensorMathReduce

          ,Torch.Sig.NN       as Torch.FFI.THC.NN.Double
          ,Torch.Sig.Types.NN as Torch.Types.THC
          )
