name:           hasktorch-dimensions
version:        0.0.1.0
synopsis:       Torch for tensors and neural networks in Haskell
description:    core tensor abstractions wrapping raw TH bindings
category:       Tensors, Machine Learning
homepage:       https://github.com/hasktorch/hasktorch#readme
bug-reports:    https://github.com/hasktorch/hasktorch/issues
author:         Austin Huang
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.24

source-repository head
  type: git
  location: https://github.com/hasktorch/hasktorch

library
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
      base >=4.7 && <5
    , containers
    , dimensions >=0.3.2.0 && < 1.0
    , safe-exceptions >=0.1.0.0
    , singletons >=2.2
    , typelits-witnesses >=0.2.3.0
  exposed-modules:
      Torch.Dimensions

