cabal-version:       2.2
name:                examples
version:             0.2.0.0
synopsis:            examples for the new version of hasktorch
-- description:
homepage:            https://github.com/hasktorch/hasktorch#readme
license:             BSD-3-Clause
author:              Austin Huang
maintainer:          hasktorch@gmail.com
copyright:           2019 Austin Huang
category:            Codegen
build-type:          Simple

common config
  default-language:    Haskell2010
  ghc-options:         -fplugin GHC.TypeLits.Normalise -fplugin GHC.TypeLits.KnownNat.Solver -fplugin GHC.TypeLits.Extra.Solver -fconstraint-solver-iterations=0
  build-depends:       base >= 4.7 && < 5
                     , hasktorch
                    --  , ghc-typelits-extra >= 0.3.1
                    --  , ghc-typelits-knownnat >= 0.7
                    --  , ghc-typelits-natnormalise >= 0.7
                     , ghc-typelits-extra
                     , ghc-typelits-knownnat
                     , ghc-typelits-natnormalise
                     , mtl

executable xor-mlp
  import:              config
  hs-source-dirs:      xor-mlp
  main-is:             Main.hs

executable static-xor-mlp
  import:              config
  hs-source-dirs:      static-xor-mlp
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , hasktorch
                     , mtl
                     , reflection
 
library static-mnist
  import:              config
  hs-source-dirs:      static-mnist
  ghc-options:         -fno-warn-partial-type-signatures
  exposed-modules:     Image
                     , Common
  build-depends:       bytestring >= 0.10.8
                     , zlib >= 0.6
                     , libtorch-ffi
                     , random >= 1.1

test-suite spec
  import:             config
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules:      ImageSpec
  build-depends:      base >= 4.7 && < 5
                    , hspec
                    , hspec-discover
                    , safe-exceptions
                    , QuickCheck
                    , mtl
                    , static-mnist

executable static-mnist-cnn
  import:              config
  hs-source-dirs:      static-mnist-cnn
  main-is:             Main.hs
  ghc-options:         -fno-warn-partial-type-signatures
  build-depends:       libtorch-ffi
                     , random >= 1.1
                     , safe-exceptions
                     , static-mnist

executable static-mnist-mlp
  import:              config
  hs-source-dirs:      static-mnist-mlp
  main-is:             Main.hs
  ghc-options:         -fno-warn-partial-type-signatures
  build-depends:       libtorch-ffi
                     , random >= 1.1
                     , safe-exceptions
                     , static-mnist

executable static-transformer
  import:              config
  hs-source-dirs:      static-transformer
  main-is:             Main.hs
  ghc-options:         -fno-warn-partial-type-signatures
  build-depends:       libtorch-ffi
                     , safe-exceptions

executable rnn
  import:              config
  hs-source-dirs:      rnn
  main-is:             Main.hs
  other-modules:       RecurrentLayer,
                       Elman,
                       LSTM,
                       GRU
  build-depends:       libtorch-ffi

executable minimal-text-example
  import:              config
  hs-source-dirs:      minimal-text-example,
                       rnn
  main-is:             Hello.hs
  other-modules:       RecurrentLayer,
                       Elman,
                       LSTM,
                       GRU
  build-depends:       libtorch-ffi

executable regression
  import:              config
  hs-source-dirs:      regression
  main-is:             Main.hs
  build-depends:       libtorch-ffi

executable gaussian-process
  import:              config
  hs-source-dirs:      gaussian-process
  main-is:             Main.hs
  ghc-options:         -fno-warn-partial-type-signatures

executable vae
  import:              config
  hs-source-dirs:      vae
  main-is:             Main.hs
  ghc-options:         -fno-warn-partial-type-signatures

executable serialization
  import:              config
  hs-source-dirs:      serialization
  main-is:             Main.hs
  ghc-options:         -fno-warn-partial-type-signatures
  build-depends:       bytestring
                     , serialise

executable optimizers
  hs-source-dirs:      optimizers
  main-is:             Main.hs
  other-modules:       Optimizers, TestFunctions
  default-language:    Haskell2010
  ghc-options:         -fno-warn-partial-type-signatures
  build-depends:       base >= 4.7 && < 5
                     , hasktorch
                     , mtl >= 2.2.2

executable initializers
  hs-source-dirs:      initializers
  main-is:             Main.hs
  other-modules:       Initializers, InitializerSpec
  default-language:    Haskell2010
  ghc-options:         -fno-warn-partial-type-signatures
  build-depends:       base >= 4.7 && < 5
                     , hasktorch
                     , hspec

executable image-processing
  hs-source-dirs:      image-processing
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -fno-warn-partial-type-signatures
  build-depends:       base >= 4.7 && < 5
                     , hasktorch
                     , libtorch-ffi
                     , JuicyPixels
                     , vector
                     , bytestring
                     , safe-exceptions

executable mnist-mlp
  import:              config
  hs-source-dirs:      mnist-mlp
  main-is:             Main.hs
  other-modules:       UntypedImage
  ghc-options:         -fno-warn-partial-type-signatures
  build-depends:       libtorch-ffi
                     , bytestring >= 0.10.8
                     , random >= 1.1
                     , safe-exceptions
                     , static-mnist
